Fix margin for wishlist items on mobile

--- a/packages/scandipwa/src/component/WishlistItem/WishlistItem.style.scss
+++ b/packages/scandipwa/src/component/WishlistItem/WishlistItem.style.scss
@@ -17,7 +17,7 @@
 .WishlistItem {
     @include mobile {
         padding-block: 14px;
-        margin-inline: var(--my-account-wrapper-margin-mobile);
+        margin-inline-end: var(--my-account-wrapper-margin-mobile);
         border-block-start: 1px solid var(--wishlist-item-border-color);
     }
 
